--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,11 +27,11 @@
                     </h1>
                 </header>
                 <article class="aboutText">
-                    Thank you for visiting my site !<br/>
-                    I am problem solver who does Engineering not only <br/>
+                    Thank you for visiting my site !<br/><br/>
+                    I am a problem solver who does Engineering not only 
                     to make a living but also for fun.<br/><br/>
                     I started my carrier back in 1999 by falling in love with Automation and programming PLCs.<br/>
-                    Since then I have worked in veraity of projects from embeded systems to web application.<br>
+                    Since then I have worked in veraity of projects from Embeded systems to Web Application.<br>
                     
                 </article>
             </section>
@@ -123,7 +123,7 @@
 
                 <header *ngIf="showDesktopSkills" class="t3">
                     <h2 class="display-5 text-uppercase text-success">Frameworks , Libraries: <span
-                            class="display-3 text-uppercase text-white">WPF , WCF , PRISM</span></h2>
+                            class="display-3 text-uppercase text-white">.NET WPF , WCF , PRISM</span></h2>
                 </header>
 
                 <header *ngIf="showDesktopSkills" class="t4">
