added some fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -92,7 +92,7 @@
                 <div *ngIf="show2010" class="company">Company: <span>{{company}}</span> </div>
                 <div *ngIf="show2010" class="title">Title: <span>{{jobtitle}}</span> </div>
                 <div *ngIf="show2010" class="role">Responsibalities: <span>{{responsibalities}}</span> </div>
-                <img *ngIf="show2010" class="img2" src={{espnImage}}>
+                <img *ngIf="show2010" class="img2" src="{{espnImage}}">
 
                 <img *ngIf="show2013" class="companyLogo" src={{companyLogo}}>
                 <div *ngIf="show2013" class="company">Company: <span>{{company}}</span> </div>
