--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -169,7 +169,7 @@ main{
 .experince{
     display: grid;
     margin-left: 2rem;
-    grid-template-columns: minmax(auto,100px) minmax(auto,100px) minmax(auto,100px) minmax(auto,100px) minmax(auto,auto) minmax(120px,auto);
+    grid-template-columns: minmax(auto,100px) minmax(auto,100px) minmax(auto,100px) minmax(auto,100px) minmax(auto,100px) minmax(120px,auto);
     grid-template-rows: minmax(40px,auto) minmax(40px,auto) minmax(40px,auto) minmax(40px,auto) 100px 200px minmax(auto,200px) minmax(auto,200px);
     grid-template-areas: 
     "b4 b5 b6 b7 b8 empty1"
@@ -406,6 +406,30 @@ main{
 .interestPrevBtn{
     grid-area: interestPrevBtn;
     margin-top: 2rem;
+}
+
+
+.contact{
+    display: grid;
+    grid-template-columns: repeat(4,minmax(auto,200px));
+    grid-template-rows: 50px repeat(4,auto);
+    grid-template-areas: 
+    "e e e e"
+    "e1 contact1 contact1 contact1"
+    "e2 e2 e2 e2"
+    "e3 contact2 contact2 contact2"
+    "e4 e4 e4 e4";
+}
+
+.contact1{
+    grid-area: contact1;
+    margin-bottom: 2rem;
+
+}
+
+.contact2{
+    grid-area: contact2;
+
 }
 
 
